# PubChem-RAG-Agent

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/public/: custom.css  theme.json
backend/public/elements/: CompoundCardV2.jsx
backend/src/: chainlit_app.py
backend/src/app/: config.py  container.py  main.py
backend/src/app/agent/: mcp_client.py  mcp_server.py  meta.py  model_factory.py  msp_server.py  persistence.py  prompts.py  prompts_advanced.py  rate_limiters.py  runtime.py  tools.py  tracing.py
backend/src/app/agent/mcp_tools/: base_search.py  search_cid.py  similar_search.py  structural.py
backend/src/app/api/routes/: agent.py  health.py  query.py
backend/src/app/presenters/: compound_card.py
backend/src/app/schemas/: agent.py  common.py  query.py  schemas.py
backend/src/app/services/: agent_service.py  agent_stream_service.py  envelope_builder.py  query_service.py
docs/: api-contract.md  architecture.md  llm-providers.md  mvp-tools-calling-2026-04-02.md  stack.md
infra/: README.md  chainlit_schema.sql  langfuse-compose.yml
